# UwpControl

./: README.md
src/: CMakeLists.txt  Main.qml  main.cpp  uwpremove.cpp  uwpremove.h
